fixes Final Exam schedule misalignment of time labels and lines - MUWM-1972

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -736,6 +736,9 @@ body {
       color: #3c3c3c;
       top: 0px;
     }
+    
+    .six-hour .day-label { height: 14%; }
+    
     .visual-course {
       width: 100%;
       display: table;
